--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "amine-api-ads",
   "version": "1.0.0",
-  "main": "index.js",
   "dependencies": {
     "@supabase/supabase-js": "latest",
-    "openai": "latest"
+    "openai": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-scripts": "latest"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   }
 }
